fix card responsiveness on mobile (#13)

--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ span {
   border-radius: 2px;
   text-align: left;
   border: 1px solid black;
-  width: 80vw;
+  width: 80%;
   margin: 0 auto;
   margin-top: 40px;
   padding: 30px 20px;
